force-app/main/default/objects/Email_Tracking__c/Email_Tracking__c.object-meta.xml
<CustomObject>
    <label>Email Tracking</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Email Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>