force-app/main/default/objects/Email_Tracking__c/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Id</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Email Tracking</relationshipLabel>
    <relationshipName>Email_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>