force-app/main/default/objects/Email_Tracking__c/fields/Last_Reply_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Reply_Check__c</fullName>
    <label>Last Reply Check</label>
    <type>DateTime</type>
</CustomField>