force-app/main/default/objects/Email_Tracking__c/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Id</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Email Tracking</relationshipLabel>
    <relationshipName>Email_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>