force-app/main/default/objects/Email_Tracking__c/fields/Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Message_ID__c</fullName>
    <label>Message ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>