force-app/main/default/objects/Email_Tracking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign Email Sent</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>1st Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>2nd Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>3rd Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>4th Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>5th Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>6th Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>7th Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>8th Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>9th Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>10th Follow-Up Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
                <isActive>false</isActive>
                <label>Sent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>