force-app/main/default/objects/Email_Tracking__c/fields/Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>Thread_ID__c</fullName>
    <label>Thread ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>